IFP-9: Промежуточный результат