@@ -14,28 +14,44 @@ import java.util.stream.Collectors;
 
 @Component
 @RequiredArgsConstructor
-public class CardModelMapper extends AbstractModelMapper<Card, CardRequest, CardResponse>{
+public class CardModelMapper extends AbstractModelMapper<Card, CardResponse>{
     private final ModelMapper modelMapper;
     private final TaskModelMapper taskModelMapper;
 
-
     @Override
     public Card toEntity(CardResponse dto) {
-        return Objects.isNull(dto) ? null : modelMapper.map(dto, Card.class);
+        return null;
     }
 
     @Override
     public CardResponse toDto(Card card) {
-        CardResponse cardResponse = Objects.isNull(card) ? null : modelMapper.map(card, CardResponse.class);
+        CardResponse cardResponse = modelMapper.map(card, CardResponse.class);
 
         List<TaskResponse> taskResponseList = card.getTasks().stream()
                 .map(taskModelMapper::toDto)
-                .collect(Collectors.toList());
-
+                .toList();
         cardResponse.setTasks(taskResponseList);
-
         return cardResponse;
     }
 
-    public Card toEntity()
+
+//    @Override
+//    public Card toEntity(CardResponse dto) {
+//        return Objects.isNull(dto) ? null : modelMapper.map(dto, Card.class);
+//    }
+//
+//    @Override
+//    public CardResponse toDto(Card card) {
+//        CardResponse cardResponse = Objects.isNull(card) ? null : modelMapper.map(card, CardResponse.class);
+//
+//        List<TaskResponse> taskResponseList = card.getTasks().stream()
+//                .map(taskModelMapper::toDto)
+//                .collect(Collectors.toList());
+//
+//        cardResponse.setTasks(taskResponseList);
+//
+//        return cardResponse;
+//    }
+//
+//    public Card toEntity()
 }
