@@ -11,11 +11,10 @@ import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 @RequiredArgsConstructor
-public class DeskModelMapper extends AbstractModelMapper<Desk, DeskRequest, DeskResponse>{
+public class DeskModelMapper extends AbstractModelMapper<Desk, DeskResponse>{
     private final ModelMapper modelMapper;
     private final EmployeeModelMapper employeeModelMapper;
     private final CardModelMapper cardModelMapper;
@@ -27,25 +26,54 @@ public class DeskModelMapper extends AbstractModelMapper<Desk, DeskRequest, Desk
 
     @Override
     public DeskResponse toDto(Desk desk) {
+        DeskResponse deskResponse = modelMapper.map(desk, DeskResponse.class);
+
         List<EmployeeResponse> employeeResponseList = desk.getEmployees().stream()
                 .map(employeeModelMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
         List<CardResponse> cardResponseList = desk.getCards().stream()
                 .map(cardModelMapper::toDto)
-                .collect(Collectors.toList());
-
-        DeskResponse deskResponse = modelMapper.map(desk, DeskResponse.class);
+                .toList();
         deskResponse.setEmployees(employeeResponseList);
         deskResponse.setCards(cardResponseList);
-
         return deskResponse;
     }
 
-    public Desk toEntity(CreateDeskDto createDeskDto) {
-        return modelMapper.map(createDeskDto, Desk.class);
+    public Desk toEntity(CreateDeskDto deskRequest) {
+        return modelMapper.map(deskRequest, Desk.class);
     }
 
     public void toEntity(Desk desk, DeskRequest deskRequest) {
         modelMapper.map(deskRequest, desk);
     }
+
+
+//    @Override
+//    public Desk toEntity(DeskResponse dto) {
+//        return null;
+//    }
+//
+//    @Override
+//    public DeskResponse toDto(Desk desk) {
+//        List<EmployeeResponse> employeeResponseList = desk.getEmployees().stream()
+//                .map(employeeModelMapper::toDto)
+//                .collect(Collectors.toList());
+//        List<CardResponse> cardResponseList = desk.getCards().stream()
+//                .map(cardModelMapper::toDto)
+//                .collect(Collectors.toList());
+//
+//        DeskResponse deskResponse = modelMapper.map(desk, DeskResponse.class);
+//        deskResponse.setEmployees(employeeResponseList);
+//        deskResponse.setCards(cardResponseList);
+//
+//        return deskResponse;
+//    }
+//
+//    public Desk toEntity(CreateDeskDto createDeskDto) {
+//        return modelMapper.map(createDeskDto, Desk.class);
+//    }
+//
+//    public void toEntity(Desk desk, DeskRequest deskRequest) {
+//        modelMapper.map(deskRequest, desk);
+//    }
 }
